AAP-29097 Added new images, files, and updates to SER content

--- a/downstream/modules/eda/proc-eda-create-event-stream.adoc
+++ b/downstream/modules/eda/proc-eda-create-event-stream.adoc
@@ -24,6 +24,7 @@ Event stream type:: Select the event stream type you prefer.
 ====
 This list displays at least 10 default event stream types that can be used to authenticate the connection coming from your remote server.
 ====
+Credentials:: Select a credential from the list, preferably the one you created for your event stream.
 Headers:: Enter HTTP header keys, separated by commas, that you want to include in the event payload. To include all headers, leave the field empty.
 
 Forward events to rulebook activation:: Use this option to enable or disable the capability of forwarding events to rulebook activations.
@@ -35,7 +36,7 @@ The event stream's event forwarding can be disabled for testing purposes while d
 
 . Click btn:[Create event stream].
 
-After creating tyour event stream, the following outputs occur:
+After creating your event stream, the following outputs occur:
 
 * The Details page is displayed. From there or the Event Streams list view, you can edit or delete it. Also, the Event Streams page shows all of the event streams you have created and the following columns for each event: *Events received*, *Last event received*, and *Event stream type*. As the first two columns receive external data through the event stream, they will continuously update to let you know they are receiving events from remote systems.
 * If you disabled the event stream, the Details page is displayed with a warning message, *This event stream is disabled*. 
