--- a/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
@@ -10,14 +10,14 @@
 
 .Procedure
 // [ddacosta] I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
-. Log in to the {PlatformNameShort}.
+. Log in to {PlatformNameShort}.
 . Navigate to the {MenuADRulebookActivations}.
 . Click btn:[Create rulebook activation]. 
 . Insert the following:
 +
 Name:: Insert the name.
 Description:: This field is optional.
-Organization:: This field is optional.
+Organization:: Enter your organization name or select Default from the list.
 Project:: Projects are a logical collection of rulebooks. This field is optional.
 Rulebook:: Rulebooks are displayed according to the project selected.
 Credential:: Select 0 or more credentials for this rulebook activation. This field is optional.
