--- a/downstream/assemblies/eda/assembly-simplified-event-routing.adoc
+++ b/downstream/assemblies/eda/assembly-simplified-event-routing.adoc
@@ -13,7 +13,9 @@ include::eda/proc-eda-create-event-stream.adoc[leveloffset=+1]
 include::eda/proc-eda-config-remote-sys-to-events.adoc[leveloffset=+1]
 include::eda/proc-eda-verify-event-streams-work.adoc[leveloffset=+1]
 include::eda/proc-eda-replace-sources-with-event-streams.adoc[leveloffset=+1]
-include::eda/con-event-streams-attachment-activations.adoc[leveloffset=+1]
+//include::eda/con-event-streams-attachment-activations.adoc[leveloffset=+1]
+include::eda/proc-eda-resend-webhook-data-event-streams.adoc[leveloffset=+1]
+include::eda/proc-eda-check-rule-audit-event-stream.adoc[leveloffset=+1]
 
 
 //[role="_additional-resources"]
