--- a/downstream/modules/eda/proc-eda-verify-event-streams-work.adoc
+++ b/downstream/modules/eda/proc-eda-verify-event-streams-work.adoc
@@ -7,23 +7,27 @@ Verify that you can use your event stream to connect to a remote system and rece
 . Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuADEventStreams}.
 . Select the event stream that you created to validate connectivity and ensure that the event stream sends data to the rulebook activation. 
+. Verify that the events were received.You can see in the *Events received* field that the event was received. You can also see the header for the event stream that contains details about the event.
 +
-If you choose to disable the *Forward events to rulebook activation*, the following message is displayed: *This event stream is disabled*. This allows you to test your new event stream before attaching it to a rulebook activation.
+image:eda-verify-event-streams.png[Verify event streams work]
++
+If you scroll down in the UI, you can also see the body of the payload with more information about the webhook.  
++
+image:eda-verify-rulebook-attachment.png
++
+The Header and Body sections for the event stream are displayed on the Details page. They will differ based on the vendor who is sending the event. The header and body can be used to check the attributes in the event payload,  which will help you in writing conditions in your rulebook. Specifically, it allows you to look at the unique attributes in the payload, which can be used in conditions. For example:
+//-----
+//event.payload.alerts[0].labels.job == "kube-state-metrics"
+//event.payload.alerts[0].status == "firing"
+//-----
 //+
-//image:eda-verify-event-streams.png[Verify event streams work]
-+
-The Header and Body sections for the event streamThe Details tab displays . They will differ based on the vendor who is sending the event. The header and body can be used to check the attributes in the event payload,  which will help you in writing conditions in your rulebook. Specifically, it allows you to look at the unique attributes in the payload, which can be used in conditions. For example:
-+
------
-event.payload.alerts[0].labels.job == "kube-state-metrics"
-event.payload.alerts[0].status == "firing"
------
-+
-[NOTE]
-====
-With event streams, payload is always appended to the body.
-====
-+
-. After you have validated that there is connectivity and the events are coming in from the remote system, you can enable the Forward events to rulebook activation option.
-
+//[NOTE]
+//====
+//With event streams, payload is always appended to the body.
+//====
+//+
+//. After you have validated that there is connectivity and the events are coming in from the remote system, you can enable the Forward events to rulebook activation option.
+. Toggle the *Forward events to rulebook activation* option to  enable you to push your events to a rulebook activation.
 This moves the event stream to production mode and makes it easy to attach to rulebook activations.
++
+When this option is toggled off, your ability to forward events to a rulebook activation is disabled and you will see the *This event stream is disabled* message.
