AAP-29097 Removed cross-reference to prevent errors in build

--- a/downstream/modules/eda/proc-eda-resend-webhook-data-event-streams.adoc
+++ b/downstream/modules/eda/proc-eda-resend-webhook-data-event-streams.adoc
@@ -2,7 +2,7 @@
 
 = Resending webhook data from your event stream type
 
-After you have replaced your sources with the event stream you created, you can now resend data from the event stream to ensure that it is attached to your rulebook activation. In the previous example used in xref:proc-eda-config-remote-sys-to-events.adoc[Configuring your remote system to send events], the GitHub event stream was used. Likewise, the following example demonstrates how you would resend webhook data from your event stream.
+After you have replaced your sources with the event stream you created, you can now resend data from the event stream to ensure that it is attached to your rulebook activation. In the previous example used in "Configuring your remote system to send events", the GitHub event stream was used. Likewise, the following example demonstrates how you would resend webhook data from your event stream.
 
 .Procedure
 . Go back to the *GitHub Webhook / Manage webhook* page.
