updates to managing private collections and repo management assemblies

--- a/downstream/modules/hub/proc-approve-collection.adoc
+++ b/downstream/modules/hub/proc-approve-collection.adoc
@@ -4,7 +4,7 @@
 
 = Approving collections for internal publication
 
-You can approve collections uploaded to individual namespaces for internal publication and use. All collections awaiting review are located under the *Approval* tab in the *Staging* repository.
+You can approve collections uploaded to individual namespaces for internal publication and use. All collections awaiting review are located in {MenuACAdminCollectionApproval}.
 
 .Prerequisites
 
