--- a/downstream/modules/hub/proc-create-repository.adoc
+++ b/downstream/modules/hub/proc-create-repository.adoc
@@ -8,13 +8,13 @@
 When you use {PlatformName} to create a repository, you can configure the repository to be private or hide it from search results.
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
+
 . Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACAdminRepositories}.
-. Click btn:[Add repository].
-. Enter a *Repository name*.
+. Click btn:[Create repository].
+. Enter a *Name* for your repository.
 . In the *Description* field, describe the purpose of the repository.
-. To retain previous versions of your repository each time you make a change, select *Retained number of versions*. The number of retained versions can range anywhere between 0 and unlimited. To save all versions, leave this set to null.
+. To retain previous versions of your repository each time you make a change, enter a figure in the field labeled *Retained number of versions*. The number of retained versions can range anywhere between 0 and unlimited. To save all versions, leave this set to null.
 +
 [NOTE]
 ====
@@ -27,10 +27,10 @@ Staging:: Anyone is allowed to publish automation content into the repository.
 Approved:: Collections added to this repository are required to go through the approval process by way of the staging repository. When auto approve is enabled, any collection uploaded to a staging repository is automatically promoted to all of the approved repositories.
 None:: Any user with permissions on the repository can publish to the repository directly, and the repository is not part of the approval pipeline.
 +
-. Optional: To hide the repository from search results, select *Hide from search*. This option is selected by default.
+. Optional: To hide the repository from search results, select *Hide from search*. 
 . Optional: To make the repository private, select *Make private*. This hides the repository from anyone who does not have permissions to view the repository.
-. To sync the content from a remote repository into this repository, select *Remote* and select the remote that contains the collections you want included in your custom repository. For more information, see xref:proc-basic-repo-sync[Repository sync].
-. Click btn:[Save].
+. To sync the content from a remote repository into this repository, in the *Remote* field select the remote that contains the collections you want included in your custom repository. For more information, see xref:proc-basic-repo-sync[Repository sync].
+. Click btn:[Create repository].
 
 [role="_additional-resources"]
 .Next steps
