--- a/downstream/modules/hub/proc-provide-repository-access.adoc
+++ b/downstream/modules/hub/proc-provide-repository-access.adoc
@@ -8,14 +8,15 @@
 By default, private repositories and the automation content collections are hidden from all users in the system. Public repositories can be viewed by all users, but cannot be modified. Use this procedure to provide access to your custom repository.
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
+
 . Log in to {PrivateHubName}.
 . From the navigation panel, select {MenuACAdminRepositories}.
-. Locate your repository in the list and click the btn:[More Actions] icon *{MoreActionsIcon}*, then select *Edit*.
-. Select the *Access* tab.
-. Select a group for *Repository owners*.
-+
-See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/getting_started_with_automation_hub/assembly-user-access[Configuring user access for your {PrivateHubName}] for information about implementing user access.
-+
-. Select the roles you want assigned to the selected group.
-. Click btn:[Save].
+. Click into your repository in the list and select the *Team Access* tab.
+. Click btn:[Add roles].
+. Select the team to which you want to grant a role, then click btn:[Next].
+. Select the roles you want to apply to the selected team, and then click btn:[Next].
+. Review your selections and click btn:[Finish].
+. Click btn:[Close] to complete the process.
+
+See link:{LinkCentralAuth} for more information about implementing user access.
+
