--- a/downstream/modules/hub/proc-reject-collections.adoc
+++ b/downstream/modules/hub/proc-reject-collections.adoc
@@ -2,7 +2,7 @@
 
 = Rejecting collections uploaded for review
 
-You can reject collections uploaded to individual namespaces. All collections awaiting review are located under the *Approval* tab in the *Staging* repository.
+You can reject collections uploaded to individual namespaces. All collections awaiting review are located in {MenuACAdminCollectionApproval}.
 
 Collections requiring approval have the status *Needs review*. Click the *Version* to view the contents of the collection.
 
