--- a/downstream/modules/hub/proc-adding-collections-repository.adoc
+++ b/downstream/modules/hub/proc-adding-collections-repository.adoc
@@ -9,7 +9,7 @@ After you create your repository, you can begin adding automation content collec
 
 .Procedure
 . From the navigation panel, select {MenuACAdminRepositories}.
-. Locate your repository in the list and click the btn:[More Actions] icon *{MoreActionsIcon}*, then select *Edit*.
-. Select the *Collections version* tab.
-. Click btn:[Add Collection] and select the collections that you want to add to your repository.
+. Click into your repository in the list.
+. Select the *Collection versions* tab.
+. Click btn:[Add Collections] and select the collections that you want to add to your repository.
 . Click btn:[Select].
