AAP-29097 Updated duplicate title

--- a/downstream/modules/eda/proc-eda-check-rule-audit-event-stream.adoc
+++ b/downstream/modules/eda/proc-eda-check-rule-audit-event-stream.adoc
@@ -1,6 +1,6 @@
 [id="eda-check-rule-audit-event-stream"]
 
-= Resending webhook data from your event stream type
+= Check the Rule Audit for events on your new event stream
 
 When events have been sent and received by {DAcontroller}, you can confirm that actions have been triggered by going to the Rule Audit page and viewing the event stream results.
 
