--- a/downstream/modules/hub/proc-create-remote.adoc
+++ b/downstream/modules/hub/proc-create-remote.adoc
@@ -8,16 +8,16 @@
 You can use {PlatformName} to create a remote configuration to an external collection source. Then, you can sync the content from those collections to your custom repositories.
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to {HubName}.
+
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACAdminRemotes}.
-. Click btn:[Add Remote].
+. Click btn:[Create Remote].
 . Enter a *Name* for the remote configuration.
 . Enter the *URL* for the remote server, including the path for the specific repository.
 +
 [NOTE]
 ====
-To find the remote server URL and repository path, navigate to {MenuACAdminRepositories}, select your repository, and click btn:[Copy CLI configuration].
+To find the remote server URL and repository path, navigate to {MenuACAdminRepositories}, select the btn:[More Actions] icon *{MoreActionsIcon}*, and select btn:[Copy CLI configuration].
 ====
 +
 . Configure the credentials to the remote server by entering a *Token* or *Username* and *Password* required to access the external collection.
@@ -28,7 +28,7 @@ To generate a token from the navigation panel, select {MenuACAPIToken}, click bt
 ====
 +
 . To access collections from {Console}, enter the *SSO URL* to sign in to the identity provider (IdP).
-. Select or create a *YAML requirements* file to identify the collections and version ranges to synchronize with your custom repository. For example, to download only the kubernetes and AWS collection versions 5.0.0 or later the requirements file would look like this:
+. Select or create a *Requirements file* to identify the collections and version ranges to synchronize with your custom repository. For example, to download only the kubernetes and AWS collection versions 5.0.0 or later the requirements file would look like this:
 +
 -----
 Collections:
@@ -42,7 +42,7 @@ Collections:
 All collection dependencies are downloaded during the Sync process.
 ====
 +
-. Optional: To configure your remote further, use the options available under *Advanced configuration*:
+. Optional: To configure your remote further, use the options available under *Show advanced options*:
 .. If there is a corporate proxy in place for your organization, enter a *Proxy URL*, *Proxy Username* and *Proxy Password*.
 .. Enable or disable transport layer security using the *TLS validation* checkbox.
 .. If digital certificates are required for authentication, enter a *Client key* and *Client certificate*.
