--- a/downstream/modules/hub/proc-provide-remote-access.adoc
+++ b/downstream/modules/hub/proc-provide-remote-access.adoc
@@ -8,11 +8,12 @@
 After you create a remote configuration, you must provide access to it before anyone can use it.
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to {PrivateHubName}.
+
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACAdminRemotes}.
-. Locate your repository in the list, click the btn:[More Actions] icon *{MoreActionsIcon}*, and select *Edit*.
-. Select the *Access* tab.
-. Select a group for *Repository owners*. See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/getting_started_with_automation_hub/assembly-user-access[Configuring user access for your {PrivateHubName}] for information about implementing user access.
-. Select the appropriate roles for the selected group.
-. Click btn:[Save].
+. Click into your repository in the list, and then select the *Team Access* tab.
+. Click btn:[Add roles].
+. Select the team to which you want to grant a role, then click btn:[Next].
+. Select the roles you want to apply to the selected team, and then click btn:[Next].
+. Review your selections and click btn:[Finish].
+. Click btn:[Close] to complete the process.
