updates to repo sync assembly

--- a/downstream/modules/hub/proc-basic-repo-sync.adoc
+++ b/downstream/modules/hub/proc-basic-repo-sync.adoc
@@ -5,10 +5,10 @@
 
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to {HubName}.
+
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACAdminRepositories}.
-. Locate your repository in the list and click *Sync*.
+. Locate your repository in the list and click btn:[More Actions] icon *{MoreActionsIcon}*, then select *Sync repository*.
 +
 All collections in the configured remote are downloaded to your custom repository. To check the status of the collection sync, select {MenuACAdminTasks} from the navigation panel.
 +
@@ -19,4 +19,4 @@ To limit repository synchronization to specific collections within a remote, you
 
 [role="_additional-resources"]
 .Additional resources
-For more information about using requirements files, see link:https://docs.ansible.com/ansible/latest/collections_guide/collections_installing.html#install-multiple-collections-with-a-requirements-file[Install multiple collections with a requirements file] in the _Using Ansible collections_ guide.
+For more information about using requirements files, see xref:proc-create-requirements-file[Creating a requirements file].
