updates to collection import export assembly

--- a/downstream/modules/hub/proc-import-collection.adoc
+++ b/downstream/modules/hub/proc-import-collection.adoc
@@ -8,15 +8,17 @@
 As an automation content creator, you can import a collection to use in a custom repository. To use a collection in your custom repository, you must first import the collection into your namespace so the {HubName} administrator can approve it.
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to {HubName}.
+
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACNamespaces}. The *Namespaces* page displays all of the namespaces available.
-. Click btn:[View Collections].
+. Select the namespace to which you want to add your collection.
+. Select the *Collections* tab.
 . Click btn:[Upload Collection].
-. Navigate to the collection tarball file, select the file and click btn:[Open].
-. Click btn:[Upload].
+. Enter or browse to select a collection file.
+. Select the repository pipeline to add the collection. The choices are *Staging repos* and *Repositories without pipeline*.
+. Click btn:[Upload collection].
 +
-The *My Imports* screen displays a summary of tests and notifies you if the collection upload is successful or has failed.
+The *Imports* screen displays a summary of tests and notifies you if the collection upload is successful or has failed. To find your imports, on your namespace click the btn:[More Actions] icon *{MoreActionsIcon}* and select *Imports*.
 +
 [NOTE]
 ====
