updates for populate container registry assembly

--- a/downstream/assemblies/hub/assembly-managing-containers-hub.adoc
+++ b/downstream/assemblies/hub/assembly-managing-containers-hub.adoc
@@ -6,7 +6,7 @@ ifdef::context[:parent-context: {context}]
 :context: managing-containers
 
 [role="_abstract"]
-Learn the administrator workflows and processes for configuring {PrivateHubName} container registry and repositories.
+Learn the administrator workflows and processes for configuring {PrivateHubName} remote registry and repositories.
 
 include::assembly-managing-container-registry.adoc[leveloffset=+1]
 include::assembly-container-user-access.adoc[leveloffset=+1]
