--- a/downstream/modules/hub/con-container-registry.adoc
+++ b/downstream/modules/hub/con-container-registry.adoc
@@ -6,13 +6,13 @@
 
 [role="_abstract"]
 
-The {HubName} container registry is used for storing and managing container images.
-When you have built or sourced a container image, you can push that container image to the registry portion of {PrivateHubName} to create a container repository.
+The {HubName} remote registry is used for storing and managing {ExecEnvShort}s.
+When you have built or sourced an {ExecEnvShort}, you can push that {ExecEnvShort} to the registry portion of {PrivateHubName} to create a container repository.
 
 [role="_additional-resources"]
 .Next steps
 
-* Push a container image to the {HubName} container registry.
+* Push a {ExecEnvShort} to the {HubName} remote registry.
 * Create a group with access to the container repository in the registry.
 * Add the new group to the container repository.
 * Add a README to the container repository to provide users with information and relevant links.
