--- a/downstream/modules/hub/proc-create-groups.adoc
+++ b/downstream/modules/hub/proc-create-groups.adoc
@@ -2,9 +2,9 @@
 // obtaining-token/master.adoc
 [id="proc-create-group"]
 
-= Creating a new group in {PrivateHubName}
+= Creating a new team in {PrivateHubName}
 
-You can create and assign permissions to a group in {PrivateHubName} that enables users to access specified features in the system.
-By default, the *Admin* group in the {HubName} has all permissions assigned and is available on initial login. Use the credentials created when installing {PrivateHubName}.
+You can create and assign permissions to a team in {PrivateHubName} that enables users to access specified features in the system.
+By default, new teams do not have any assigned permissions. You can add permissions when first creating a team or edit an existing team to add or remove permissions. 
 
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/getting_started_with_automation_hub/index#proc-create-group[Creating a new group in {PrivateHubName}] in the Getting started with {HubName} guide.
+For more information, see link:{URLCentralAuth}/gw-managing-access#assembly-controller-teams_gw-manage-rbac[Teams] in the {TitleCentralAuth} guide.
