--- a/downstream/modules/hub/proc-tag-pulled-image.adoc
+++ b/downstream/modules/hub/proc-tag-pulled-image.adoc
@@ -3,29 +3,28 @@
 [id="tag-pulled-images"]
 
 
-= Tagging images for use in {HubName}
+= Tagging {ExecEnvShort}s for use in {HubName}
 
 
 [role="_abstract"]
-After you pull images from a registry, tag them for use in your {PrivateHubName} container registry.
+After you pull {ExecEnvShort}s from a registry, tag them for use in your {PrivateHubName} remote registry.
 
 .Prerequisites
 
-* You have pulled a container image from an external registry.
+* You have pulled an {ExecEnvShort} from an external registry.
 * You have the FQDN or IP address of the {HubName} instance.
 
 .Procedure
 
-* Tag a local image with the {HubName} container repository:
+* Tag a local {ExecEnvShort} with the {HubName} container repository:
 +
 [subs="+quotes"]
 -----
-$ podman tag registry.redhat.io/__<container_image_name>__:__<tag>__ __<automation_hub_hostname>__/__<container_image_name>__
+$ podman tag registry.redhat.io/__<ee_name>__:__<tag>__ __<automation_hub_hostname>__/__<ee_name>__
 -----
 
 
 .Verification
-
 
 . List the images in local storage:
 +
@@ -33,4 +32,4 @@ $ podman tag registry.redhat.io/__<container_image_name>__:__<tag>__ __<automati
 $ podman images
 -----
 +
-. Verify that the image you recently tagged with your {HubName} information is contained in the list.
+. Verify that the {ExecEnvShort} you recently tagged with your {HubName} information is contained in the list.
