--- a/downstream/assemblies/hub/assembly-managing-container-registry.adoc
+++ b/downstream/assemblies/hub/assembly-managing-container-registry.adoc
@@ -2,22 +2,19 @@
 ifdef::context[:parent-context: {context}]
 
 
-
 [id="managing-container-registry"]
-= Manage your {PrivateHubName} container registry
+= Manage your {PrivateHubName} remote registry
 
 :context: managing-container-registry
 
 [role="_abstract"]
-Manage container image repositories in your {PlatformNameShort} infrastructure by using the {HubName} container registry.
+Manage container image repositories in your {PlatformNameShort} infrastructure by using the {HubName} remote registry.
 You can perform the following tasks with {HubNameStart}:
 
 * Control who can access individual container repositories
 * Change tags on images
 * View activity and image layers
 * Provide additional information related to each container repository
-
-
 
 ////
 The following include statements pull in the module files that comprise the assembly. Include any combination of concept, procedure, or reference modules required to cover the user story. You can also include other assemblies.
