--- a/downstream/modules/hub/proc-push-container.adoc
+++ b/downstream/modules/hub/proc-push-container.adoc
@@ -3,11 +3,11 @@
 [id="push-containers"]
 
 
-= Pushing a container image to {PrivateHubName}
+= Pushing an {ExecEnvShort} to {PrivateHubName}
 
 
 [role="_abstract"]
-You can push tagged container images to {PrivateHubName} to create new containers and populate the container registry.
+You can push tagged {ExecEnvShort}s to {PrivateHubName} to create new containers and populate the remote registry.
 
 .Prerequisites
 
@@ -28,11 +28,11 @@ $ podman login -u=__<username>__ -p=__<password>__ __<automation_hub_url>__
 Let Podman prompt you for your password when you log in. Entering your password at the same time as your username can expose your password to the shell history.
 ====
 +
-. Push your container image to your {HubName} container registry:
+. Push your {ExecEnvShort} to your {HubName} remote registry:
 +
 [subs="+quotes"]
 -----
-$ podman push __<automation_hub_url>__/__<container_image_name>__
+$ podman push __<automation_hub_url>__/__<ee_name>__
 -----
 
 .Troubleshooting
@@ -42,8 +42,8 @@ This may lead to image-layer digest changes and a failed push operation, resulti
 
 .Verification
 
-. Log in to your {HubName}.
+. Log in to your {PlatformNameShort}.
 //[ddacosta] I see no such selection. Should this be changed to Execution Environments > Remote Registries? If so, replace with {MenuACAdminRemoteRegistries}
-. Navigate to menu:Container Registry[].
+. Navigate to {MenuACAdminRemoteRegistries}.
 
 . Locate the container in the container repository list.
