--- a/downstream/modules/hub/ref-container-permissions.adoc
+++ b/downstream/modules/hub/ref-container-permissions.adoc
@@ -1,13 +1,13 @@
 
 [id="container-registry-group-permissions"]
 
-= Container registry group permissions
+= Remote registry team permissions
 
 [role="_abstract"]
-You can control how users can interact with containers managed in {PrivateHubName}. 
-Use the following list of permissions to create groups with the right privileges for your container registries.
+You can control how users can interact with {ExecEnvShort}s managed in {PrivateHubName}. 
+Use the following list of permissions to create teams with the right privileges for your remote registries.
 
-.List of group permissions used to manage containers in {PrivateHubName}
+.List of team permissions used to manage containers in {PrivateHubName}
 [cols="1,1"]
 |===
 |Permission name|Description
@@ -21,15 +21,9 @@ Use the following list of permissions to create groups with the right privileges
 |Change container
 |Users can change information on a container
 
-|Change image tags
-|Users can modify image tags
-
-|Pull private containers
-|Users can pull images from a private container
+|Change {ExecEnvShort} tags
+|Users can modify {ExecEnvShort} tags
 
 |Push to existing container
-|Users can push an image to an existing container
-
-|View private containers
-|Users can view containers marked as private
+|Users can push an {ExecEnvShort} to an existing container
 |===
