updates for pull image assembly

--- a/downstream/assemblies/hub/assembly-setup-container-repository.adoc
+++ b/downstream/assemblies/hub/assembly-setup-container-repository.adoc
@@ -7,17 +7,15 @@ ifdef::context[:parent-context: {context}]
 [id="setting-up-container-repository"]
 = Setting up your container repository
 
-
 :context: assembly-keyword
 
 
-
 [role="_abstract"]
-When you set up your container repository, you must add a description, include a README, add groups that can access the repository, and tag images.
+When you set up your container repository, you must add a description, include a README, add teams that can access the repository, and tag {ExecEnvName}s.
 
-== Prerequisites to setting up your container registry
+== Prerequisites to setting up your remote registry
 
-* You are logged in to a {PrivateHubName}.
+* You are logged in to {PlatformNameShort}.
 * You have permissions to change the repository.
 
 
