--- a/downstream/modules/hub/proc-add-container-readme.adoc
+++ b/downstream/modules/hub/proc-add-container-readme.adoc
@@ -26,8 +26,8 @@ By default, the README is empty.
 * You have permissions to change containers.
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to {HubName}.
+
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACExecEnvironments}.
 . Select your container repository.
 . On the *Detail* tab, click btn:[Add].
