--- a/downstream/modules/hub/proc-create-credential.adoc
+++ b/downstream/modules/hub/proc-create-credential.adoc
@@ -1,25 +1,25 @@
 [id="proc-create-credential"]
 
-= Creating a credential in {ControllerName}
+= Creating a credential
 
-To pull container images from a password or token-protected registry, you must create a credential in {ControllerName}.
+To pull {ExecEnvName} images from a password or token-protected registry, you must create a credential.
 
 In earlier versions of {PlatformNameShort}, you were required to deploy a registry to store {ExecEnvShort} images.
-On {PlatformNameShort} 2.0 and later, the system operates as if you already have a container registry up and running.
-To store {ExecEnvShort} images, add the credentials of only your selected container registries.
+On {PlatformNameShort} 2.0 and later, the system operates as if you already have a remote registry up and running.
+To store {ExecEnvShort} images, add the credentials of only your selected remote registries.
 
 .Procedure
 // For 2.5 this will be Log in to Ansible Automation Platform. From the navigation panel select Access Management > Credentials. Select the Automation Execution tab
-. Navigate to {ControllerName}.
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuAECredentials}.
 . Click btn:[Add] to create a new credential.
 . Enter an authorization *Name*, *Description*, and *Organization*.
 . Select the *Credential Type*.
-. Enter the *Authentication URL*. This is the container registry address.
-. Enter the *Username* and *Password or Token* required to log in to the container registry.
+. Enter the *Authentication URL*. This is the remote registry address.
+. Enter the *Username* and *Password or Token* required to log in to the remote registry.
 . Optional: To enable SSL verification, select *Verify SSL*.
 . Click btn:[Save].
 
-Filling in at least one of the fields organization, user, or team is mandatory, and can be done through the user interface
+Filling in at least one of the fields organization, user, or team is mandatory, and can be done through the user interface.
 
 //[dcd-This should be replaced with a link; otherwise, it's not helpful]For more information, please reference the Pulling from Protected Registries section of the Execution Environment documentation.
