--- a/downstream/modules/hub/proc-sync-image.adoc
+++ b/downstream/modules/hub/proc-sync-image.adoc
@@ -3,8 +3,8 @@
 [id="proc-sync-image-adoc_{context}"]
 = Syncing images from a container repository
 
-You can pull images from the {HubName} container registry to sync an image to your local machine.
-To sync an image from a remote container registry, you must first configure a remote registry.
+You can pull {ExecEnvName}s from the {HubName} remote registry to sync an image to your local machine.
+To sync an {ExecEnvName} from a remote registry, you must first configure a remote registry.
 
 .Prerequisites
 
@@ -20,7 +20,7 @@ You must have permission to view and pull from a private container repository.
 +
 [NOTE]
 ====
-Some container registries are aggressive with rate limiting.
+Some remote registries are aggressive with rate limiting.
 Set a rate limit under *Advanced Options*.
 ====
 +
@@ -29,7 +29,7 @@ Set a rate limit under *Advanced Options*.
 . Click btn:[Add execution environment] in the page header.
 
 . Select the registry you want to pull from.
-The *Name* field displays the name of the image displayed on your local registry.
+The *Name* field displays the name of the {ExecEnvName} displayed on your local registry.
 +
 [NOTE]
 ====
@@ -38,7 +38,7 @@ For example, if the upstream name is set to "alpine" and the *Name* field is "lo
 ====
 +
 . Set a list of tags to include or exclude.
-Syncing images with a large number of tags is time consuming and uses a lot of disk space.
+Syncing {ExecEnvName}s with a large number of tags is time consuming and uses a lot of disk space.
 
 [role="_additional-resources"]
 .Additional resources
