--- a/downstream/modules/hub/proc-tag-image.adoc
+++ b/downstream/modules/hub/proc-tag-image.adoc
@@ -5,16 +5,16 @@
 = Tagging container images
 
 [role="_abstract"]
-Tag images to add an additional name to images stored in your {HubName} container repository. If no tag is added to an image, {HubName} defaults to `latest` for the name.
+Tag {ExecEnvName}s to add an additional name to {ExecEnvName}s stored in your {HubName} container repository. If no tag is added to an {ExecEnvName}, {HubName} defaults to `latest` for the name.
 
 .Prerequisites
 
-* You have *change image tags* permissions.
+* You have *change {ExecEnvName} tags* permissions.
 
 .Procedure
 
 . From the navigation panel, select {MenuACExecEnvironments}.
-. Select your container repository.
+. Select {ExecEnvName}.
 . Click the *Images* tab.
 . Click the btn:[More Actions] icon *{MoreActionsIcon}*, and click btn:[Manage tags].
 . Add a new tag in the text field and click btn:[Add].
