--- a/downstream/assemblies/hub/assembly-pull-image.adoc
+++ b/downstream/assemblies/hub/assembly-pull-image.adoc
@@ -6,9 +6,9 @@ ifdef::context[:parent-context: {context}]
 :context: pulling-images-container-repository
 
 [role="_abstract"]
-Pull images from the {HubName} container registry to make a copy to your local machine. 
-{HubNameStart} provides the `podman pull` command for each `latest` image in the container repository. 
-You can copy and paste this command into your terminal, or use `podman pull` to copy an image based on an image tag.
+Pull {ExecEnvName}s from the {HubName} remote registry to make a copy to your local machine. 
+{HubNameStart} provides the `podman pull` command for each `latest` {ExecEnvName} in the container repository. 
+You can copy and paste this command into your terminal, or use `podman pull` to copy an {ExecEnvName} based on an {ExecEnvName} tag.
 
 include::hub/proc-pull-image.adoc[leveloffset=+1]
 include::hub/proc-sync-image.adoc[leveloffset=+1]
