--- a/downstream/modules/hub/proc-add-group-to-container-repo.adoc
+++ b/downstream/modules/hub/proc-add-group-to-container-repo.adoc
@@ -1,22 +1,22 @@
 [id="providing-access-to-containers"]
 
-= Providing access to your container repository
+= Providing access to your {ExecEnvName}s
 
 [role="_abstract"]
-Provide access to your container repository for users who need to work with the images.
-Adding a group allows you to modify the permissions the group can have to the container repository.
-You can use this option to extend or restrict permissions based on what the group is assigned.
+Provide access to your {ExecEnvName}s for users who need to work with the images.
+Adding a team allows you to modify the permissions the team can have to the container repository.
+You can use this option to extend or restrict permissions based on what the team is assigned.
 
 .Prerequisites
 
 * You have *change container namespace* permissions.
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to {HubName}.
+
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACExecEnvironments}.
-. Select your container repository.
-. From the *Access* tab, click btn:[Select a group].
-. Select the group or groups to which you want to grant access and click btn:[Next].
+. Select your {ExecEnvName}.
+. From the *Team Access* tab, click btn:[Add roles].
+. Select the team or teams to which you want to grant access and click btn:[Next].
 . Select the roles that you want to add to this {ExecEnvShort} and click btn:[Next].
-. Click btn:[Add].
+. Click btn:[Finish].
