--- a/downstream/modules/hub/proc-pull-image.adoc
+++ b/downstream/modules/hub/proc-pull-image.adoc
@@ -4,7 +4,7 @@
 
 
 [role="_abstract"]
-You can pull images from the {HubName} container registry to make a copy to your local machine.
+You can pull {ExecEnvName}s from the {HubName} remote registry to make a copy to your local machine.
 
 .Prerequisites
 
@@ -12,9 +12,9 @@ You can pull images from the {HubName} container registry to make a copy to your
 
 .Procedure
 
-. If you are pulling container images from a password or token-protected registry, xref:proc-create-credential[create a credential in {ControllerName}] before pulling the image.
+. If you are pulling {ExecEnvName}s from a password or token-protected registry, xref:proc-create-credential[create a credential] before pulling the {ExecEnvName}.
 . From the navigation panel, select {MenuACExecEnvironments}.
-. Select your container repository.
+. Select your {ExecEnvName}.
 . In the *Pull this image* entry, click btn:[Copy to clipboard].
 . Paste and run the command in your terminal.
 
