updates to managing containers assembly

--- a/downstream/modules/hub/proc-using-podman-ensure-image-signed.adoc
+++ b/downstream/modules/hub/proc-using-podman-ensure-image-signed.adoc
@@ -6,8 +6,5 @@ When ensuring a signature is signed by specific signatures, the signature must b
 .Procedure
 
 . From the navigation panel, select {MenuACAdminSignatureKeys}.
-. Click the btn:[More Actions] icon *{MoreActionsIcon}* next to the signature that you are using.
-. Select *Download key* from the drop-down menu.
-A new window opens.
-. In the *Name* field, enter the name of the key.
-. Click btn:[Save].
+. Click the btn:[Download key] icon next to the signature that you are using. A new window should open to indicate you have downloaded the key.
+
