--- a/downstream/assemblies/hub/assembly-working-with-signed-containers.adoc
+++ b/downstream/assemblies/hub/assembly-working-with-signed-containers.adoc
@@ -9,7 +9,7 @@ ifdef::context[:parent-context: {context}]
 
 :context: working-with-signed-containers
 
-{ExecEnvNameStart} are container images used by Ansible {ControllerName} to run jobs. 
+{ExecEnvNameStart} are container images used by {PlatformNameShort} to run jobs. 
 You can download this content to {PrivateHubName}, and publish it within your organization.
 
 include::hub/proc-deploying-your-system-for-container-signing.adoc[leveloffset=+1]
