--- a/downstream/modules/hub/proc-adding-containers-remotely-to-the-automation-hub.adoc
+++ b/downstream/modules/hub/proc-adding-containers-remotely-to-the-automation-hub.adoc
@@ -10,13 +10,12 @@ You can add containers remotely to {HubName} in one of the following two ways:
 * Execution Environment
 
 .Procedure
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
 
-. Log in to {HubName}.
+. Log in to {PlatformNameShort}.
 
 . From the navigation panel, select {MenuACAdminRemoteRegistries}.
 
-. Click btn:[Add remote registry].
+. Click btn:[Create remote registry].
 
 * In the *Name* field, enter the name of the registry where the container resides.
 
@@ -26,4 +25,4 @@ You can add containers remotely to {HubName} in one of the following two ways:
 
 * In the *Password* field, enter the password if necessary.
 
-* Click btn:[Save].
+* Click btn:[Create remote registry].
