--- a/downstream/assemblies/hub/assembly-delete-container.adoc
+++ b/downstream/assemblies/hub/assembly-delete-container.adoc
@@ -6,21 +6,21 @@ ifdef::context[:parent-context: {context}]
 :context: delete-container
 
 [role="_abstract"]
-Delete a container repository from your {PrivateHubName} to manage your disk space.
-You can delete repositories from the {PlatformName} interface in the *Container Repository* list view.
+Delete a remote repository from your {PlatformNameShort} to manage your disk space.
+You can delete repositories from the {PlatformName} interface in the *Execution Environment* list view.
 
 .Prerequisites
 * You have permissions to manage repositories.
 
 .Procedure
-. Navigate to {HubName}.
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACExecEnvironments}.
 . On the container repository that you want to delete, click the btn:[More Actions] icon *{MoreActionsIcon}*, and click btn:[Delete].
 . When the confirmation message is displayed, click the checkbox and click btn:[Delete].
 
 .Verification
-* Return to the *Execution Environments* list view.
-If the container repository has been successfully deleted, the container repository is no longer on the list.
+* Return to the *{ExecEnvName}s* list view.
+If the {ExecEnvName} has been successfully deleted, it will no longer be in the list.
 
 
 ifdef::parent-context[:context: {parent-context}]
