--- a/downstream/modules/hub/proc-deploying-your-system-for-container-signing.adoc
+++ b/downstream/modules/hub/proc-deploying-your-system-for-container-signing.adoc
@@ -58,10 +58,8 @@ automationhub_container_signing_service_key = /absolute/path/to/key/to/sign
 automationhub_container_signing_service_script = /absolute/path/to/script/that/signs
 -----
 +
-//[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Once installation is complete, navigate to your {HubName}.
 
-. From the navigation panel, select {MenuACAdminSignatureKeys}.
+. Once installation is complete, log in to {PlatformNameShort} and navigate to {MenuACAdminSignatureKeys}.
 
 . Ensure that you have a key titled *container-default*, or *container*-_anyname_.
 
