--- a/downstream/modules/hub/proc-pushing-container-images-from-your-local.adoc
+++ b/downstream/modules/hub/proc-pushing-container-images-from-your-local.adoc
@@ -3,7 +3,7 @@
 
 = Pushing container images from your local environment
 
-Use the following procedure to sign images on a local system and push those signed images to the {HubName} registry.
+Use the following procedure to sign {ExecEnvName}s on a local system and push those signed {ExecEnvName}s to the {HubName} registry.
 
 .Procedure
 . From a terminal, log in to Podman, or any container client currently in use:
@@ -12,37 +12,35 @@ Use the following procedure to sign images on a local system and push those sign
 > podman pull <container-name>
 ----
 +
-. After the image is pulled, add tags (for example: latest, rc, beta, or version numbers, such as 1.0; 2.3, and so on):
+. After the {ExecEnvName} is pulled, add tags (for example: latest, rc, beta, or version numbers, such as 1.0; 2.3, and so on):
 +
 ----
 > podman tag <container-name> <server-address>/<container-name>:<tag name>
 ----
 +
-. Sign the image after changes have been made, and push it back up to the {HubName} registry:
+. Sign the {ExecEnvName} after changes have been made, and push it back up to the {HubName} registry:
 +
 ----
 > podman push <server-address>/<container-name>:<tag name> --tls-verify=false --sign-by <reference to the gpg key on your local>
 ----
 +
-If the image is not signed, it can only be pushed with any current signature embedded. Alternatively, you can use the following script to push the image without signing it:
+If the {ExecEnvName} is not signed, it can only be pushed with any current signature embedded. Alternatively, you can use the following script to push the {ExecEnvName} without signing it:
 +
 ----
 > podman push <server-address>/<container-name>:<tag name> --tls-verify=false
 ----
 +
-. Once the image has been pushed, navigate to your {HubName}.
-
-. From the navigation panel, select {MenuACExecEnvironments}.
+. Once the {ExecEnvName} has been pushed, navigate to {MenuACExecEnvironments}.
 
 . To display the new {ExecEnvShort}, click the *Refresh* icon.
 
-. Click the name of the image  to view your pushed image.
+. Click the name of the image to view your pushed image.
 
 .Troubleshooting
 
-The details page in {HubName} indicates whether or not an image has been signed. If the details page indicates that an image is *Unsigned*, you can sign the image from {HubName}  using the following steps:
+The details page for each {ExecEnvName} indicates whether it has been signed. If the details page indicates that an image is *Unsigned*, you can sign the {ExecEnvName} from {HubName} using the following steps:
 
-. Click the image name to navigate to the details page.
+. Click the {ExecEnvName} name to navigate to the details page.
 
 . Click the btn:[More Actions] icon *{MoreActionsIcon}*.
 Three options are available:
@@ -52,5 +50,5 @@ Three options are available:
 
 . Click *Sign* from the drop-down menu.
 
-The signing service signs the image.
-After the image is signed, the status changes to "signed".
+The signing service signs the {ExecEnvName}.
+After the {ExecEnvName} is signed, the status changes to "signed".
