--- a/downstream/modules/hub/proc-using-podman-ensure-image-signed.adoc
+++ b/downstream/modules/hub/proc-using-podman-ensure-image-signed.adoc
@@ -1,7 +1,7 @@
 [id="using-podman-ensure-image-signed"]
 
 = Using podman to ensure an image is signed by a specific signature
-When ensuring a signature is signed by specific signatures, the signature must be on your local environment.
+When ensuring an {ExecEnvName} is signed by specific signatures, the signature must be on your local environment.
 
 .Procedure
 
