Fixing minor formatting issues and add a missing file

--- a/downstream/modules/platform/proc-attaching-subscriptions.adoc
+++ b/downstream/modules/platform/proc-attaching-subscriptions.adoc
@@ -75,12 +75,14 @@ $ sudo subscription-manager list --consumed
 +
 {PlatformName} {PlatformVers} for RHEL 8
 +
+[literal, options="nowrap" subs="+attributes"]
 ----
 $ sudo subscription-manager repos --enable ansible-automation-platform-{PlatformVers}-for-rhel-8-x86_64-rpms
 ----
 +
 {PlatformName} {PlatformVers} for RHEL 9
 +
+[literal, options="nowrap" subs="+attributes"]
 ----
 $ sudo subscription-manager repos --enable ansible-automation-platform-{PlatformVers}-for-rhel-9-x86_64-rpms
 ----
