--- a/downstream/modules/platform/proc-gw-editing-a-user.adoc
+++ b/downstream/modules/platform/proc-gw-editing-a-user.adoc
@@ -8,11 +8,11 @@ You can modify the properties of a user account after it is created.
 
 .Procedure
 
-. From the navigation panel, select *Access Management > Users*.
+. From the navigation panel, select {MenuAMUsers}.
 
 . Select the check box for the user that you want to modify.
 
-. Click the *More Actions* icon next to the user you want to modify.
+. Click the *Pencil* icon and select *Edit user*.
 
 . The *Edit* user page is displayed where you can modify user details such as, *Password*, *Email*, *User type*, and *Organization*.
 
