--- a/downstream/assemblies/platform/assembly-controller-users.adoc
+++ b/downstream/assemblies/platform/assembly-controller-users.adoc
@@ -21,6 +21,8 @@ include::platform/proc-gw-users-list-view.adoc[leveloffset=+1]
 
 include::platform/proc-controller-creating-a-user.adoc[leveloffset=+1]
 
+include::platform/proc-gw-editing-a-user.adoc[leveloffset=+1]
+
 include::platform/proc-controller-deleting-a-user.adoc[leveloffset=+1]
 
 include::platform/ref-controller-user-roles.adoc[leveloffset=+1]
