--- a/downstream/modules/eda/proc-eda-verify-event-streams-work.adoc
+++ b/downstream/modules/eda/proc-eda-verify-event-streams-work.adoc
@@ -11,22 +11,13 @@ Verify that you can use your event stream to connect to a remote system and rece
 +
 image:eda-verify-event-streams.png[Verify event streams work]
 +
-If you scroll down in the UI, you can also see the body of the payload with more information about the webhook.  
+If you scroll down in the UI, you can also see the body of the payload with more information about the webhook. 
 +
-image:eda-verify-rulebook-attachment.png
+image:eda-payload-body-event-streams.png[Payload body]
 +
-The Header and Body sections for the event stream are displayed on the Details page. They will differ based on the vendor who is sending the event. The header and body can be used to check the attributes in the event payload,  which will help you in writing conditions in your rulebook. Specifically, it allows you to look at the unique attributes in the payload, which can be used in conditions. For example:
-//-----
-//event.payload.alerts[0].labels.job == "kube-state-metrics"
-//event.payload.alerts[0].status == "firing"
-//-----
-//+
-//[NOTE]
-//====
-//With event streams, payload is always appended to the body.
-//====
-//+
-//. After you have validated that there is connectivity and the events are coming in from the remote system, you can enable the Forward events to rulebook activation option.
+
+The *Header* and *Body* sections for the event stream are displayed on the Details page. They differ based on the vendor who is sending the event. The header and body can be used to check the attributes in the event payload,  which will help you in writing conditions in your rulebook. For example:
+
 . Toggle the *Forward events to rulebook activation* option to  enable you to push your events to a rulebook activation.
 This moves the event stream to production mode and makes it easy to attach to rulebook activations.
 +
