--- a/downstream/assemblies/eda/assembly-simplified-event-routing.adoc
+++ b/downstream/assemblies/eda/assembly-simplified-event-routing.adoc
@@ -3,7 +3,7 @@
 
 = Simplfied event routing
 
-Simplified event routing enables {EDAcontroller} to capture and analyze data from various remote systems using event streams. Event streams allow you to send events from a remote system like GitHub or GitLab into Event-Driven Ansible controller. You can attach 1 or more event streams to an activation by swapping out sources in a rulebook. 
+Simplified event routing enables {EDAcontroller} to capture and analyze data from various remote systems using event streams. With event streams, you can send events from a remote system like GitHub or GitLab into {EDAcontroller}. You can attach 1 or more event streams to an activation by swapping out sources in a rulebook. 
 
 Event streams are an easy way to connect your sources to your rulebooks. This capability lets you create a single endpoint to receive alerts from an event source and then use the events in multiple rulebooks.
 
@@ -18,10 +18,7 @@ include::eda/proc-eda-resend-webhook-data-event-streams.adoc[leveloffset=+1]
 include::eda/proc-eda-check-rule-audit-event-stream.adoc[leveloffset=+1]
 
 
-//[role="_additional-resources"]
-//.Additional resources
-* 
-//* For more detailed information on Ansible rulebooks, see the section on link:https://ansible.readthedocs.io/projects/rulebook/en/stable/rulebooks.html[Rulebooks] in the link:https://ansible.readthedocs.io/projects/rulebook/en/latest/[Ansible Rulebook documentation]. 
+
 
 
 
