--- a/downstream/modules/eda/proc-eda-config-remote-sys-to-events.adoc
+++ b/downstream/modules/eda/proc-eda-config-remote-sys-to-events.adoc
@@ -29,4 +29,4 @@ If you do not have a repository, click *New* to create a new one, select an owne
 . Enter your *Secret*.
 . Click *Add webhook*.
 
-After the webhook has been added, it attempts to send a test payload to ensure there is connectivity between the two systems (GitHub and Event Driven Ansible controller). If it can successfully send the data you will see a green check mark next to the Webhook URL with the message Last delivery was successful.
+After the webhook has been added, it attempts to send a test payload to ensure there is connectivity between the two systems (GitHub and {EDAcontroller}). If it can successfully send the data you will see a green check mark next to the *Webhook URL* with the message, *Last delivery was successful*.
