AAP-29097 A few more updates for final PR

--- a/downstream/modules/eda/proc-eda-resend-webhook-data-event-streams.adoc
+++ b/downstream/modules/eda/proc-eda-resend-webhook-data-event-streams.adoc
@@ -2,7 +2,7 @@
 
 = Resending webhook data from your event stream type
 
-After you have replaced your sources with the event stream you created, you can now resend data from the event stream to ensure that it is attached to your rulebook activation. In the example shared in xref:proc-eda-config-remote-sys-to-events.adoc[Configuring your remote system to send events], the GitHub event stream was used. The following example demonstrates how you would resend webhook data if you were using a GitHub event stream.
+After you have replaced your sources with the event stream you created, you can now resend data from the event stream to ensure that it is attached to your rulebook activation. In the example shared earlier, the GitHub event stream was used. The following example demonstrates how to resend webhook data if you were using a GitHub event stream.
 
 .Procedure
 . Go back to the *GitHub Webhook / Manage webhook* page.
