Correct link in execution enviroments (#2130)
* Correct link in execution enviroments

https://issues.redhat.com/browse/AAP-31913

--- a/downstream/modules/builder/ref-scenario-using-authentication-ee.adoc
+++ b/downstream/modules/builder/ref-scenario-using-authentication-ee.adoc
@@ -8,7 +8,7 @@ Use the following example to customize the default definition file to pass {HubN
 
 .Prerequisites
 
-* You have created an API token, as in link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/managing_automation_content/proc-create-api-token[Creating the API token in {HubName}] and stored it in a secure location, for example in a file named `token.txt`.
+* You have created an API token, as in link:{URLHubManagingContent}/managing-cert-valid-content#proc-create-api-token[Retrieving the API token for your Red Hat Certified Collection] and stored it in a secure location, for example in a file named `token.txt`.
 * Define a build argument that gets populated with the {HubName} API token:
 ----
 export ANSIBLE_GALAXY_SERVER_AUTOMATION_HUB_TOKEN=$(cat <token.txt>)
