--- a/downstream/modules/platform/con-about-operator.adoc
+++ b/downstream/modules/platform/con-about-operator.adoc
@@ -11,6 +11,6 @@ Deploying {PlatformNameShort} instances with a Kubernetes native operator offers
 
 You can install the {OperatorPlatform} from the Red Hat Operators catalog in OperatorHub.
 
-For information about the {OperatorPlatform} infrastructure topology see {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/index#container-topologies[Container supported topologies] in {TitleTopologies}.
+For information about the {OperatorPlatform} infrastructure topology see {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/index#container-topologies[Container topologies] in _{TitleTopologies}_.
 
 
