--- a/downstream/modules/platform/proc-add-operator-execution-nodes.adoc
+++ b/downstream/modules/platform/proc-add-operator-execution-nodes.adoc
@@ -51,4 +51,4 @@ watch podman ps
 ----
 
 .Additional resources
-* For more information about managing instance groups see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-instance-groups[Managing Instance Groups] section of the Automation Controller User Guide.
+* For more information about managing instance groups see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/using_automation_execution/index#controller-instance-groups[Managing Instance Groups] section of the Automation Controller User Guide.
