AAP-32187 Updating 2.5 Devtools links

--- a/downstream/modules/devtools/proc-devtools-create-aap-job.adoc
+++ b/downstream/modules/devtools/proc-devtools-create-aap-job.adoc
@@ -8,10 +8,17 @@ You can then create a job template for each playbook from the project.
 .Procedure
 
 . In a browser, log in to {controllername}.
-. Configure a Source Control credential type for your source control system if necessary. See the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-getting-started-create-credential[Creating new credentials] section of the _Automation controller user guide_ for more details.
-. In {controllername}, create a project for the GitHub repository where you stored your playbook project.
-Refer to the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-projects[Projects] chapter of the _Automation controller user guide_.
-. Create a job template that uses a playbook from the project that you created.
-Refer to the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-create-job-template[Job Templates] chapter of the _Automation controller user guide_.
-. Run your playbook from {ControllerName} by launching the job template. Refer to the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-launch-job-template[Launching a job template] section of the _Automation controller user guide_.
+. Configure a Source Control credential type for your source control system if necessary. See the
+link:{URLControllerUserGuide}/controller-credentials#controller-create-credential[Creating new credentials]
+section of _{TitleControllerUserGuide}_ for more details.
+https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/using_automation_execution/controller-credentials#controller-create-credential
+. In {controllername}, create a project for the GitHub repository where you stored your playbook project. Refer to the
+link:{URLControllerUserGuide}/controller-projects[Projects]
+chapter of _{TitleControllerUserGuide}_.
+. Create a job template that uses a playbook from the project that you created. Refer to the
+link:{URLControllerUserGuide}/controller-job-templates[Job Templates]
+chapter of _{TitleControllerUserGuide}_.
+. Run your playbook from {ControllerName} by launching the job template. Refer to the
+link:{URLControllerUserGuide}/controller-job-templates#controller-launch-job-template[Launching a job template]
+section of _{TitleControllerUserGuide}_.
 
