--- a/downstream/modules/devtools/proc-devtools-install-rpm.adoc
+++ b/downstream/modules/devtools/proc-devtools-install-rpm.adoc
@@ -5,7 +5,7 @@
 [role="_abstract"]
 
 {ToolsName} is bundled in the {PlatformNameShort} RPM (Red Hat Package Manager) package.
-Refer to the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_installation_guide[_{PlatformName} Installation guide_] documentation for information on installing {PlatformNameShort}.
+Refer to the _link:{LinkInstallationGuide}_ documentation for information on installing {PlatformNameShort}.
 
 .Prerequisites
 
